tests/paczka1/small_fuzzy/80507827.err
Error in line 1: DvliE A539 12,1
Error in line 2: DvliE S195 22,8
Error in line 4: W0P3tQ8koj9 A16 94,5
Error in line 12: A16 A16 64,5
